--- a/con_wise.html
+++ b/con_wise.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-      <link rel="stylesheet" href="css/style2.css">
+      <link rel="stylesheet" href="style2.css">
 
   
 </head>
@@ -49,7 +49,7 @@
 
   
 
-    <script  src="js/index1.js"></script>
+    <script  src="index1.js"></script>
 
 
 
